--- a/student-service-updated_New/student-service-updated_New/src/main/resources/application.properties
+++ b/student-service-updated_New/student-service-updated_New/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+# ================================
+# Application & Server
+# ================================
 spring.application.name=student-service
 server.port=8082
+
+# ================================
+# Database Configuration
+# ================================
 spring.datasource.url=jdbc:mysql://localhost:3306/elearn_student?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Namrata@1805
@@ -8,3 +15,20 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 spring.flyway.enabled=false
+
+# ================================
+# Eureka Client Configuration
+# ================================
+# URL of Eureka Server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# This tells Eureka this service is a client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Optional: Use IP address instead of hostname
+eureka.instance.prefer-ip-address=true
+
+# Optional: Logging
+logging.level.com.netflix.discovery=INFO
+logging.level.org.springframework.cloud.netflix.eureka=INFO
