--- a/teacher-service/teacher-service/src/main/resources/application.properties
+++ b/teacher-service/teacher-service/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# ================================
+# Application & Server
+# ================================
 spring.application.name=teacher-service
 server.port=8081
 
-
-
+# ================================
+# Database Configuration
+# ================================
 spring.datasource.url=jdbc:mysql://localhost:3306/elearn_teacher?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Namrata@1805
@@ -12,16 +16,40 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 
 spring.jmx.enabled=false
-
-
 spring.main.allow-circular-references=true
 
+# ================================
+# Logging
+# ================================
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
+logging.level.com.netflix.discovery=INFO
+logging.level.org.springframework.cloud.netflix.eureka=INFO
 
-
+# ================================
+# Management & Metrics
+# ================================
 management.endpoints.web.exposure.include=health,metrics
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
 management.metrics.enable.all=true
+
+# ================================
+# Eureka Client Configuration
+# ================================
+# URL of Eureka Server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Register this service as a client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Use IP address for registration
+eureka.instance.prefer-ip-address=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+spring.main.allow-bean-definition-overriding=true
